Thu Dec 11 11:11:34 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/unittests/cancel.c: add test for thread

Wed Dec 10 18:07:31 EST 2008	JK Lowden <jklowden@freetds.org>
	* doc/userguide.sgml
	- add osql to unixODBC troubleshooting 

Wed Dec 10 15:55:30 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/tds.h src/apps/tsql.c src/ctlib/cs.c:
	* src/ctlib/unittests/common.c src/dblib/dblib.c src/tds/config.c:
	* src/tds/unittests/convert.c:
	- declare tds_g_append_mode and STD_DATETIME_FMT in tds.h

Tue Dec 09 10:38:07 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/hmac_md5.h include/tds.h include/tdsconvert.h:
	* src/tds/tds_checks.h:
	- optimize link using gcc4

Fri Dec 05 09:31:29 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/unittests/putdata.c: improve

Wed Dec 03 13:54:18 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/unittests/array_out.c src/odbc/unittests/blob1.c:
	* src/odbc/unittests/cancel.c src/odbc/unittests/common.c:
	* src/odbc/unittests/common.h src/odbc/unittests/connect.c:
	* src/odbc/unittests/cursor1.c src/odbc/unittests/cursor5.c:
	* src/odbc/unittests/cursor7.c src/odbc/unittests/error.c:
	* src/odbc/unittests/lang_error.c src/odbc/unittests/prepclose.c:
	* src/odbc/unittests/print.c src/odbc/unittests/putdata.c:
	* src/odbc/unittests/raiserror.c src/odbc/unittests/tables.c:
	* src/odbc/unittests/timeout.c src/odbc/unittests/timeout4.c:
	* src/odbc/unittests/transaction.c src/odbc/unittests/transaction2.c:
	* src/odbc/unittests/typeinfo.c src/odbc/unittests/utf8.c:
	* src/odbc/unittests/warning.c:
	- remove global RetCode
	- new Command2 macro, use it

Wed Dec 03 09:35:32 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/ctlib/cs.c src/dblib/dblib.c: avoid possible buffer overflow
	* src/dblib/dbutil.c: make message const
	* src/odbc/odbc.c: make odbc_prret thread safe

Tue Dec 02 11:53:14 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>